--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "clsx": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.8.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
